修正頁面錯誤

--- a/src/assets/helper/component/_component.scss
+++ b/src/assets/helper/component/_component.scss
@@ -51,7 +51,7 @@
     'https://tesla-cdn.thron.com/delivery/public/image/tesla/1a5ba4b1-efd8-40bc-8b6d-e81bf8223e37/bvlatuR/std/2560x1440/Model-3-Performance-Hero-Desktop-LHD',
     center,
     9%,
-    100%
+    100vh
   );
 }
 .fullPageLayout--7 {
@@ -76,7 +76,7 @@
     'https://tesla-cdn.thron.com/delivery/public/image/tesla/27d0055c-b0bf-476c-b3aa-ec59d314f871/bvlatuR/std/0x0/27d0055c-b0bf-476c-b3aa-ec59d314f871',
     center,
     center,
-    100%
+    100vh
   );
 }
 
