--- a/src/assets/helper/component/_component.scss
+++ b/src/assets/helper/component/_component.scss
@@ -67,7 +67,7 @@
     'https://images.unsplash.com/photo-1585011650347-c59dbef5a823?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80',
     center,
     40%,
-    77vh
+    100%
   );
 }
 
@@ -78,14 +78,6 @@
     center,
     77vh
   );
-}
-
-.scroll-full-page {
-  height: 100vh;
-  overflow-y: scroll;
-  @include lg {
-    scroll-snap-type: y mandatory;
-  }
 }
 
 .textLineOverflow--4 {
